--- a/issues.html
+++ b/issues.html
@@ -1,14 +1,20 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-  <title>Susan Smith For Town Council</title>
+  <title>On the Issues</title>
   <meta charset="utf-8">
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-  Restoring Economic Prosperty
+  <header>
+    <h1>On the Issues</h1>
+  </header>
 
+  <div id=maincolumn>
+    <h3>Restoring Economic Prosperty</h3>
+  <p>
   Pug cornhole locavore messenger bag, freegan master cleanse small batch biodiesel. Mumblecore Bushwick cliche post-ironic. Sartorial High Life cornhole umami you probably haven't heard of them. Try-hard street art flexitarian heirloom High Life. Brunch PBR four loko pug tousled butcher. Banh mi vinyl shabby chic, typewriter roof party meh food truck vegan swag flannel. Street art readymade sriracha, fingerstache jean shorts selfies retro ennui.
-
+</p>
   A Four Point Plan For Town Revitalization
 
     * Church-key dreamcatcher readymade
