--- a/about.html
+++ b/about.html
@@ -9,19 +9,21 @@
   <header>
     <h1>About</h1>
   </header>
-  Born and Raised Here
-
+<div id=maincolumn>
+  <h3>Born and Raised Here</h3>
+<p>
   Food truck Thundercats kale chips photo booth paleo. Banh mi four loko fingerstache cray. Hashtag fingerstache plaid umami, tofu VHS cronut Banksy health goth Blue Bottle cold-pressed readymade viral literally. Cliche sartorial direct trade craft beer, typewriter master cleanse slow-carb twee sriracha tousled fanny pack fap Bushwick. Bespoke Echo Park fanny pack retro. Stumptown crucifix meggings, Tumblr 3 wolf moon plaid leggings High Life lumbersexual meditation direct trade. McSweeney's sustainable Wes Anderson, bicycle rights Williamsburg umami Schlitz Blue Bottle vinyl cred cronut aesthetic tote bag YOLO ugh.
-
-  Balancing Family and Career
-
+</p>
+  <h3>Balancing Family and Career</h3>
+<p>
   Pug cornhole locavore messenger bag, freegan master cleanse small batch biodiesel. Mumblecore Bushwick cliche post-ironic. Sartorial High Life cornhole umami you probably haven't heard of them. Try-hard street art flexitarian heirloom High Life. Brunch PBR four loko pug tousled butcher. Banh mi vinyl shabby chic, typewriter roof party meh food truck vegan swag flannel. Street art readymade sriracha, fingerstache jean shorts selfies retro ennui.
-
-  Real American Values
-
-    * Church-key dreamcatcher readymade
-    * Pitchfork selfies fashion axe tote bag
-    * Bitters blog slow-carb Wes Anderson freegan
-    * Sriracha you probably haven't heard of them
+</p>
+  <h3>Real American Values</h3>
+<ul>
+    <li> Church-key dreamcatcher readymade
+    <li> Pitchfork selfies fashion axe tote bag
+    <li> Bitters blog slow-carb Wes Anderson freegan
+    <li> Sriracha you probably haven't heard of them
+</ul>
 </body>
 </html>
