--- a/volunteer.html
+++ b/volunteer.html
@@ -6,23 +6,24 @@
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-  <header>
-    <h1>Volunteer</h1>
-  </header>
-  Get Involved!
-
+<header>
+  <h1>Volunteer</h1>
+</header>
+<div id=maincolumn>
+<h3>Get Involved!</h3>
+<p>
   Pug cornhole locavore messenger bag, freegan master cleanse small batch biodiesel. Mumblecore Bushwick cliche post-ironic. Sartorial High Life cornhole umami you probably haven't heard of them. Try-hard street art flexitarian heirloom High Life. Brunch PBR four loko pug tousled butcher. Banh mi vinyl shabby chic, typewriter roof party meh food truck vegan swag flannel. Street art readymade sriracha, fingerstache jean shorts selfies retro ennui.
-
-  Ways To Help The Campaign
-
-    * Church-key dreamcatcher readymade
-    * Pitchfork selfies fashion axe tote bag
-    * Bitters blog slow-carb Wes Anderson freegan
-    * Sriracha you probably haven't heard of them
-
-  Join Today!
-
+</p>
+<h3>Ways To Help The Campaign</h3>
+<ul>
+  <li> Church-key dreamcatcher readymade
+  <li> Pitchfork selfies fashion axe tote bag
+  <li> Bitters blog slow-carb Wes Anderson freegan
+  <li> Sriracha you probably haven't heard of them
+</ul>
+<h3>Join Today!</h3>
+<p>
   Tousled bicycle rights Schlitz swag, artisan gluten-free cardigan typewriter High Life four loko drinking vinegar small batch art party readymade +1. Williamsburg church-key readymade twee, plaid slow-carb Tumblr Wes Anderson iPhone taxidermy cronut heirloom. Wes Anderson post-ironic ennui, wolf pug lumbersexual before they sold out disrupt. Mlkshk Tumblr Brooklyn gluten-free fingerstache. Trust fund paleo PBR master cleanse occupy wayfarers jean shorts, meggings Thundercats flexitarian. Roof party Helvetica iPhone, church-key paleo direct trade Odd Future mumblecore pop-up. IPhone Intelligentsia readymade, next level 8-bit post-ironic occupy.
-
+</p>
 </body>
 </html>
